--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,7 @@
         "__init__.py": true
     },
     "github.copilot.editor.enableAutoCompletions": false,
-    "testing.automaticallyOpenPeekView": "never"
+    "testing.automaticallyOpenPeekView": "never",
+    "code-runner.runInTerminal": true
 }
+
